# p2p-payment

./: .env  Cargo.toml  TODO.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241209_000002_create_roles.rs  m20241209_000003_drop_is_admin.rs  m20251212_151853_create_merchant_site_structure.rs  main.rs
src/: app.rs  common.rs  domains.rs  lib.rs  main.rs
src/common/: app_state.rs  bootstrap.rs  config.rs  dto.rs  error.rs  hash_utils.rs  jwt.rs  middleware.rs  time_formater.rs
src/domains/: backoffice.rs  user.rs
src/domains/backoffice/api/: handler.rs  router.rs
src/domains/backoffice/app/: create_user_use_case.rs  delete_user_use_case.rs  get_user_info_use_case.rs  update_user_use_case.rs
src/domains/backoffice/domain/: merchant.rs  model.rs  repository.rs
src/domains/backoffice/dto/: user_dto.rs
src/domains/backoffice/infra/: user_entity.rs  user_repository.rs
src/domains/backoffice/role/: entity.rs  mod.rs  model.rs  repository.rs  repository_impl.rs
src/domains/user/api/: handler.rs  router.rs
src/domains/user/app/: get_user_info_use_case.rs
src/domains/user/domain/: model.rs  repository.rs
src/domains/user/dto/: user_dto.rs
src/domains/user/infra/: user_entity.rs  user_repository.rs
