[package]
name = "p2p-payment"
version = "0.1.0"
edition = "2024"

[package.metadata.sqlx]
database_url = "P2P_APP_DATABASE_URL"

[dependencies]
migration = { path = "migration" }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

#  TODO: Check feature what type is used and why?
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
bcrypt = "0.17.1"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

async-trait = "0.1.89"
axum = "0.8.6"
chrono = "0.4.42"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
figment = "0.10.19"
figment_file_env_provider = "0.2.0"
futures = "0.3.31"
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
sea-orm-cli = "1.1.17"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"

[dev-dependencies]
mockall = "0.14"
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"